tests/neg-macros/macros-in-same-project-2.check
-- Error: tests/neg-macros/macros-in-same-project-2/Bar.scala:5:9 ------------------------------------------------------
5 |  myMacro() // error
  |  ^^^^^^^^^
  |Failed to expand macro. This macro depends on an implementation that is defined in the same project and not yet compiled.
  |In particular method myMacro depends on method aMacroImplementation, object Foo.
  |
  |Moving method aMacroImplementation, object Foo to a different project would fix this.
  | This location is in code that was inlined at Bar.scala:5
